crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_repr_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a : Unknown) = Box"
---
nash::syntax

  × Unknown representation bound `Unknown`.
   ╭─[src/Main.nash:1:16]
 1 │ type box ('a : Unknown) = Box
   ·                ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
