crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_repr_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a : ) = Box"
---
nash::syntax

  × Expected a representation bound.
   ╭─[src/Main.nash:1:16]
 1 │ type box ('a : ) = Box
   ·                ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
