crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_colon.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : { x int }"
---
nash::syntax

  × Expected `:` after the field name.
   ╭─[src/Main.nash:1:9]
 1 │ f : { x int }
   ·         ─
   ╰────
  help: Separate the field name and its type with `:`.
