crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I am partway through parsing a record type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see a closing curly brace before this, so try adding a } and
        see if that helps?

        Note: When I get stuck like this, it usually means that there is a missing
        parenthesis or bracket somewhere earlier. It could also be a stray keyword or
        operator.
