crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_indent_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was partway through parsing a record type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: I was expecting to see a closing curly brace next. Try putting a } next and see
        if that helps?

        Note: I may be confused by indentation. For example, if you are trying to define
        a record type across multiple lines, I recommend using this format:

            { name : string
            , age : int
            , value : 'a
            }

        Notice that each line starts with some indentation. Usually two or four spaces.
        This is the stylistic convention in the Nash ecosystem.
