crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_indent_field.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I am partway through parsing a record type, but I got stuck after that last
  │ comma:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Trailing commas are not allowed in record types, so the fix may be to delete
        that last comma? Or maybe you were in the middle of defining an additional
        field?

        Note: I may be confused by indentation. For example, if you are trying to define
        a record type across multiple lines, I recommend using this format:

            { name : string
            , age : int
            , value : 'a
            }

        Notice that each line starts with some indentation. Usually two or four spaces.
        This is the stylistic convention in the Nash ecosystem.
