crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_indent_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : {\nx : int }"
---
nash::syntax

  × Expected an indented record field.
   ╭─[src/Main.nash:2:1]
 1 │ f : {
 2 │ x : int }
   · ─
   ╰────
  help: Indent the field inside the braces.
