crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_t_record_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
UNFINISHED RECORD TYPE

  × I just started parsing a record type, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Record types look like { name : string, age : int }, so I was expecting to see a
        field name next.
